# pyzahra

./: .env.sample  README.md  main.py  pyproject.toml  requirements.txt  setup.py
plugins/: addubot.py  ping.py
zahra/: __main__.py  config.py  database.py  init.py  main.py  premium.py
